# OpenESkin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  main.cpp  qss.qrc  readme.md  zh_CN.ts
css/: index.css
gl/: glAxis.cpp  glAxis.h  glFsr.cpp  glFsr.h  glGrid.cpp  glGrid.h  glInclude.h  glLoadStl.cpp  glLoadStl.h  glTrackballCamera.cpp  glTrackballCamera.h  glwidget.cpp  glwidget.h
inc/: commonDef.h  console.h  crc16_modbus.h  modbusMsg.h
models/mc2010/: part3.stl  part4.stl  sanjiaoxing.stl  sanjiaoxing2.stl
src/: appinit.cpp  console.cpp  crc16_modbus.cpp
ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ExitDialog.cpp  ExitDialog.h  ExitDialog.ui  MainWidget.ui  MainWindow.cpp  MainWindow.h  MainWindowSerial.cpp  frameDisplay.cpp  frameDisplay.h  frameDisplay.ui  matrixDisplay.cpp  matrixDisplay.h  matrixDisplay.ui  openSourceDialog.cpp  openSourceDialog.h  openSourceDialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  thermometerWidget.cpp  thermometerWidget.h
